# Astartis-codex-control-plane

./: .gitignore  LICENSE  README.md
astartis/: .gitignore  CMakeLists.txt  README.md  build.bat
astartis/agents/controller/: action_dispatcher.cpp  action_dispatcher.h  agent_controller.cpp  agent_controller.h  granite_client.cpp  granite_client.h  orchestrator_context.h  persona_loader.cpp  persona_loader.h  policy_engine.cpp  policy_engine.h
astartis/agents/definitions/: accessibility_auditor.json  alert_triage.json  api_designer.json  api_security_guru.json  api_tester.json  backend_specialist.json  blue_team_def.json  breach_simulator.json  bug_hunter.json  ci_cd_engineer.json  cloud_native_defender.json  cloud_sec_tester.json  code_reviewer.json  compliance_checker.json  compliance_monitor.json  container_sec.json  crypto_analyst.json  data_loss_preventer.json  db_designer.json  deception_engineer.json  dependency_mgr.json  devops_engineer.json  doc_writer.json  exploit_dev.json  forensics_agent.json  forensics_investigator.json  frontend_specialist.json  iam_privilege_auditor.json  ics_scada_tester.json  incident_responder.json  insider_threat_detector.json  ioc_manager.json  localization_mgr.json  malware_analyst.json  metrics_engineer.json  mobile_app_tester.json  osint_gatherer.json  ot_scada_guardian.json  performance_opt.json  physical_security.json  (+25 more)
astartis/agents/ecc/: ecc_adapter.cpp  ecc_adapter.h
astartis/agents/ecc/agents/: agent_performance_auditor.md  ai_harness_optimizer.md  ai_model_security_evaluator.md  attack_surface_mapper.md  autonomous_response_operator.md  build_security_analyzer.md  code_security_auditor.md  cpp_security_reviewer.md  database_security_auditor.md  security_documentation_agent.md  security_e2e_tester.md  threat_communication_analyst.md
astartis/agents/skills/: alert_scoring.json  cpp_security.json  cwe_mapping.json  false_positive_detection.json  ioc_correlation.json  log_parsing.json  mitre_mapping.json  owasp_review.json  port_scan_analysis.json  test_generation.json
astartis/bridge/: astartis_bridge.cpp  dashboard_server.cpp  dashboard_server.h  dashboard_writer.cpp  dashboard_writer.h
astartis/config/: system_config.json
astartis/configs/: demo_mode.json  full_mode.json  pen_test_only.json  soc_only.json
astartis/core/access_token/: CMakeLists.txt  access_token.cpp  access_token.h
astartis/core/active_response/: CMakeLists.txt  active_response.cpp  active_response.h
astartis/core/ai_triage/: CMakeLists.txt  ai_triage.cpp  ai_triage.h
astartis/core/attribution/: CMakeLists.txt  attribution_report.cpp  attribution_report.h
astartis/core/audit_chain/: CMakeLists.txt  audit_chain.cpp  audit_chain.h
astartis/core/chaos_detector/: CMakeLists.txt  chaos_detector.cpp  chaos_detector.h
astartis/core/clamd/: CMakeLists.txt  clamd_scanner.cpp  clamd_scanner.h
astartis/core/config/: system_config.cpp  system_config.h
astartis/core/crypto_identity/: CMakeLists.txt  crypto_identity.cpp  crypto_identity.h
astartis/core/decoy/: CMakeLists.txt  decoy.cpp  decoy.h
astartis/core/event_bus/: event_bus.h
astartis/core/firewall/: CMakeLists.txt  firewall_blocker.cpp  firewall_blocker.h
astartis/core/packet_sensor/: CMakeLists.txt  packet_sensor.cpp  packet_sensor.h
astartis/core/quarantine/: CMakeLists.txt  quarantine.cpp  quarantine.h
astartis/core/rule_engine/: CMakeLists.txt  rule_engine.cpp  rule_engine.h
astartis/core/sandbox/: CMakeLists.txt  sandbox.cpp  sandbox.h
astartis/core/threat_level/: CMakeLists.txt  threat_level.cpp  threat_level.h
astartis/core/unlock_protocol/: CMakeLists.txt  unlock_protocol.cpp  unlock_protocol.h
astartis/core/veeam_interface/: CMakeLists.txt  veeam_interface.cpp  veeam_interface.h
astartis/core/version_store/: CMakeLists.txt  version_store.cpp  version_store.h
astartis/core/worm_lock/: CMakeLists.txt  worm_lock.cpp  worm_lock.h
astartis/dashboard/: dashboard_data.json  index.html  script.js  start-dashboard.bat  style.css
astartis/network_arch/segmentation/: ssid_config.h
astartis/network_arch/tests/: test_nac_workflow.cpp  test_segmentation.cpp  test_zerotrust_decisions.cpp
astartis/network_arch/zerotrust/: nac_workflow.cpp  nac_workflow.h  zerotrust_engine.cpp  zerotrust_engine.h
astartis/pipeline/: self_healing_pipeline.cpp  self_healing_pipeline.h
astartis/scripts/: benchmark_tiers.cpp  demo_dashboard_data.cpp
astartis/tests/: test_access_token.cpp  test_active_defense.cpp  test_active_response.cpp  test_agent_controller.cpp  test_ai_triage.cpp  test_async_inference.cpp  test_attribution_report.cpp  test_audit_chain.cpp  test_chaos_detector.cpp  test_clamd_scanner.cpp  test_crypto_identity.cpp  test_decoy.cpp  test_e2e_deception.cpp  test_e2e_firewall_block.cpp  test_e2e_quarantine.cpp  test_e2e_zerotrust.cpp  test_firewall_blocker.cpp  test_granite_client.cpp  test_integration_orchestrator.cpp  test_ollama_recovery.cpp  test_packet_sensor.cpp  test_pipeline.cpp  test_quarantine.cpp  test_rule_engine.cpp  test_sandbox.cpp  test_stress_queue.cpp  test_terminal_execute.ps1  test_thread_pool.cpp  test_threat_level.cpp  test_unlock_protocol.cpp  test_veeam_interface.cpp  test_version_store.cpp  test_warm_model.cpp  test_worm_lock.cpp
astartis_web/: .gitignore  README.md  mix.exs  start-dashboard.bat
astartis_web/assets/css/: app.css
astartis_web/assets/js/: app.js
astartis_web/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
astartis_web/lib/: astartis_web.ex  astartis_web_web.ex
astartis_web/lib/astartis_web/: application.ex
astartis_web/lib/astartis_web/core/: astartis_port.ex  (+2 more)
astartis_web/lib/astartis_web_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
astartis_web/test/support/: conn_case.ex
plugins/astartis-control-plane/: .mcp.json  README.md
plugins/astartis-control-plane/.codex-plugin/: plugin.json
plugins/astartis-control-plane/scripts/: astartis_mcp_server.mjs  test_proof_mode.mjs  test_safe_tools.mjs
scripts/: setup-judge-demo.ps1
site/: README.md  app.js  index.html  styles.css
(+12 files in other folders)
